Few Functionalities added

--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
                 <li><a href="main.html">Home</a></li>
                 <li><a href="blogpost.html">BLogs</a></li>
                 <li><a href="required/about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a class="present" href="contact.html">Contact</a></li>
             </ul>
         </div>
         <div class="nav_right">
