--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
         <div class="nav_left">
             <span>Website Logo</span>
             <ul class="">
-                <li><a href="main.html">Home</a></li>
+                <li><a class="present" href="main.html">Home</a></li>
                 <li><a href="blogpost.html">BLogs</a></li>
                 <li><a href="required/about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
