--- a/required/disclaimer.html
+++ b/required/disclaimer.html
@@ -78,9 +78,9 @@
     <div class="sticky_foot">
         <span>Copyright &copy; All rights reserved</span>
         <ul>
-            <li><a href="/required/disclaimer.html">Disclaimer</a></li>
-            <li><a href="/required/privacy-policy.html">Privacy Policy</a></li>
-            <li><a href="/required/attribution.html">Attribution</a></li>
+            <li><a href="disclaimer.html">Disclaimer</a></li>
+            <li><a href="privacy-policy.html">Privacy Policy</a></li>
+            <li><a href="attribution.html">Attribution</a></li>
         </ul>
     </div>
 </body>
