--- a/required/privacy-policy.html
+++ b/required/privacy-policy.html
@@ -30,7 +30,7 @@
     <div class="privacy_policy max_width_2 t_justify m_auto">
         <br>
         <center>
-            <h1>Privacy Policy for ArenaThugz Pvt. Ltd.</h1>
+            <h2>PRIVACY POLICY</h2>
         </center>
 
         <p>At ArenaThugz, accessible from https://arenathugz.com, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by ArenaThugz and how we use it.</p>
@@ -136,9 +136,9 @@
     <div class="sticky_foot">
         <span>Copyright &copy; All rights reserved</span>
         <ul>
-            <li><a href="required/disclaimer.html">Disclaimer</a></li>
-            <li><a href="required/privacy-policy.html">Privacy Policy</a></li>
-            <li><a href="required/attribution.html">Attribution</a></li>
+            <li><a href="disclaimer.html">Disclaimer</a></li>
+            <li><a href="privacy-policy.html">Privacy Policy</a></li>
+            <li><a href="attribution.html">Attribution</a></li>
         </ul>
     </div>
 </body>
