--- a/blogpost.html
+++ b/blogpost.html
@@ -16,7 +16,7 @@
             <span>Website Logo</span>
             <ul class="">
                 <li><a href="main.html">Home</a></li>
-                <li><a href="blogpost.html">BLogs</a></li>
+                <li><a class="present" href="blogpost.html">BLogs</a></li>
                 <li><a href="required/about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
