All Pages Made Responsive

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/utilities.css">
     <link rel="stylesheet" href="CSS/blog.css">
+    <link rel="stylesheet" href="CSS/phone.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <title>Blog_Hire</title>
 </head>
 
@@ -23,6 +25,9 @@
         </div>
 
         <div class="nav_right">
+            <a href="#"><i class="fa fa-facebook fa-stack" aria-hidden="true"></i></a>
+            <a href="#"><i class="fa fa-instagram fa-stack" aria-hidden="true"></i></a>
+            <a href="#"><i class="fa fa-telegram fa-stack" aria-hidden="true"></i></a>
             <input type="text" class="form_input" name="" id="" placeholder="Search Article">
             <button class="btn" type="submit">Submit</button>
         </div>
@@ -46,6 +51,7 @@
                 dolor sit amet consectetur adipisicing elit. Dolore voluptate dicta provident dolorem veniam consequatur non, ab nisi reprehenderit, in nostrum excepturi mollitia voluptatibus cumque, sunt minima eligendi? Error, velit. Lorem ipsum dolor
                 sit amet consectetur adipisicing elit. Optio dolore impedit unde, iusto, ea laborum enim veritatis fugiat dolores beatae eos, numquam accusamus voluptate sapiente! Ipsam sunt eveniet earum perspiciatis.</p>
         </div>
+
         <div class="blog_right">
             <div class="card_about">
                 <h2>About Us:-</h2>
@@ -57,6 +63,10 @@
                 <img src="img/avatar.png" alt="">
                 <img src="img/recent.svg" alt="">
                 <img src="img/recent_1.svg" alt="">
+            </div>
+            <div class="card_comment">
+                <textarea name="" id="" cols="40" rows="4" maxlength="500" placeholder="Comment On This Blog"></textarea>
+                <button class="btn_1" type="submit">Submit</button>
             </div>
             <div class="card_categories">
 
