--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/utilities.css">
     <link rel="stylesheet" href="CSS/contact.css">
+    <link rel="stylesheet" href="CSS/phone.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <title>Blog_Hire</title>
 </head>
 
@@ -22,6 +24,9 @@
             </ul>
         </div>
         <div class="nav_right">
+            <a href="#"><i class="fa fa-facebook fa-stack" aria-hidden="true"></i></a>
+            <a href="#"><i class="fa fa-instagram fa-stack" aria-hidden="true"></i></a>
+            <a href="#"><i class="fa fa-telegram fa-stack" aria-hidden="true"></i></a>
             <input type="text" class="form_input" name="" id="" placeholder="Search Article">
             <button class="btn" type="submit">Submit</button>
         </div>
@@ -38,8 +43,8 @@
             <textarea class="form_input_1" name="" id="" cols="30" rows="4" maxlength="2000" placeholder="Describe Your Consent Here"></textarea>
             <button class="btn_1" type="submit">Send</button>
         </div>
-        <div class="divider"></div>
-        <div class="form_right"></div>
+        <!-- <div class="divider"></div>
+        <div class="form_right"></div> -->
     </div>
 
 
