--- a/required/about.html
+++ b/required/about.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/CSS/style.css">
     <link rel="stylesheet" href="/CSS/utilities.css">
+    <link rel="stylesheet" href="/CSS/phone.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <title>Blog_Hire</title>
 </head>
 
@@ -16,11 +18,14 @@
             <ul class="">
                 <li><a href="/main.html">Home</a></li>
                 <li><a href="/blogpost.html">BLogs</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a class="present" href="about.html">About</a></li>
                 <li><a href="/contact.html">Contact</a></li>
             </ul>
         </div>
         <div class="nav_right">
+            <a href="#"><i class="fa fa-facebook fa-stack" aria-hidden="true"></i></a>
+            <a href="#"><i class="fa fa-instagram fa-stack" aria-hidden="true"></i></a>
+            <a href="#"><i class="fa fa-telegram fa-stack" aria-hidden="true"></i></a>
             <input type="text" class="form_input" name="" id="" placeholder="Search Article">
             <button class="btn" type="submit">Submit</button>
         </div>
