--- a/required/attribution.html
+++ b/required/attribution.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/CSS/style.css">
     <link rel="stylesheet" href="/CSS/utilities.css">
+    <link rel="stylesheet" href="/CSS/phone.css">
     <title>Blog_Hire</title>
 </head>
 
@@ -16,7 +17,7 @@
             <ul class="">
                 <li><a href="/main.html">Home</a></li>
                 <li><a href="/blogpost.html">BLogs</a></li>
-                <li><a class="present" href="about.html">About</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="/contact.html">Contact</a></li>
             </ul>
         </div>
