--- a/search.htm
+++ b/search.htm
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/utilities.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <title>Blog_Hire</title>
 </head>
 
@@ -21,29 +22,20 @@
             </ul>
         </div>
         <div class="nav_right">
-            <input type="text" class="form_input" name="" id="" placeholder="Search Article">
-            <button class="btn" type="submit">Submit</button>
+            <a href="#"><i class="fa fa-facebook fa-stack" aria-hidden="true"></i></a>
+            <a href="#"><i class="fa fa-instagram fa-stack" aria-hidden="true"></i></a>
+            <a href="#"><i class="fa fa-telegram fa-stack" aria-hidden="true"></i></a>
+            <form action="/search.htm" method="get">
+                <input type="text" class="form_input" name="query" id="" placeholder="Search Article">
+                <button class="btn" type="submit">Submit</button>
+            </form>
         </div>
     </nav>
     <hr>
 
-    <div class="content_body max_width_1 m_auto">
-        <div class="content_left">
-            <h2><a href="#">Affiliate Marketing</a></h2>
-            <p>We're going to learn about affiliate marketing from this website. As we all know that by deploying all learning we can learn understandably with a bunch of mistakes. Mistakes not only let you know about you shortcomings but also let you to
-                improve them. Ultimately, we are going to make money from this website by doing affiliate marketing with various referral & memberships program.
-            </p>
-        </div>
-        <div class="content_right">
-            <img src="img/home.svg" alt="Affiliate Marketing">
-        </div>
-    </div>
-    <div class="max_width_1 m_auto">
-        <hr>
-    </div>
-
     <div class="recent max_width_2 m_auto">
-        <h3>Featurd Blogs:-</h3>
+        <h3>Search results for "Watermelon" (0.04 seconds):-</h3>
+        <br>
         <div class="recent_elements">
             <img src="img/recent.svg" alt="bolgpost_i">
             <div class="recent_elements_text">
@@ -77,8 +69,8 @@
     <div class="sticky_foot">
         <span>Copyright &copy; All rights reserved</span>
         <ul>
-            <li><a href="required/disclaimer.html">Disclaimer</a></li>
-            <li><a href="required/privacy-policy.html">Privacy Policy</a></li>
+            <li><a href="required/disclaimer.html">Disclaimer</a></li>|
+            <li><a href="required/privacy-policy.html">Privacy Policy</a></li>|
             <li><a href="required/attribution.html">Attribution</a></li>
         </ul>
     </div>
