Site Made More Beautiful

--- a/main.html
+++ b/main.html
@@ -33,7 +33,38 @@
         </div>
     </nav>
     <hr>
-
+    <div class="blog_categories max_width_1 m_auto">
+        <div class="blog_card">
+            <div class="card_up">
+                <img src="img/recent_3.svg" alt="">
+            </div>
+            <div class="card_down">
+                <a href="posts.htm">Lorem ipsum dolor sit amet</a>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur commodi, quas quae temporibus excepturi numquam doloremque placeat totam error unde.</p>
+            </div>
+        </div>
+        <div class="blog_card">
+            <div class="card_up">
+                <img src="img/recent_3.svg" alt="">
+            </div>
+            <div class="card_down">
+                <a href="posts.htm">Lorem ipsum dolor sit amet</a>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur commodi, quas quae temporibus excepturi numquam doloremque placeat totam error unde.</p>
+            </div>
+        </div>
+        <div class="blog_card">
+            <div class="card_up">
+                <img src="img/recent_3.svg" alt="">
+            </div>
+            <div class="card_down">
+                <a href="posts.htm">Lorem ipsum dolor sit amet</a>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur commodi, quas quae temporibus excepturi numquam doloremque placeat totam error unde.</p>
+            </div>
+        </div>
+    </div>
+    <div class="max_width_1 m_auto">
+        <hr>
+    </div>
     <div class="content_body max_width_1 m_auto">
         <div class="content_left">
             <h2><a href="#">Affiliate Marketing</a></h2>
@@ -52,33 +83,42 @@
     <div class="recent max_width_2 m_auto">
         <h3>Featurd Blogs:-</h3>
         <div class="recent_elements">
-            <img src="img/recent.svg" alt="bolgpost_i">
+            <div class="post_thumbnail">
+                <img src="img/recent.svg" alt="bolgpost_i">
+            </div>
             <div class="recent_elements_text">
                 <h4><a href="#">Earn 100,000$</a></h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore, nihil qui. Consequatur enim, ipsa, exercitationem aperiam excepturi dolore voluptas ex ab quas sapiente, illum fugiat maxime quaerat accusamus voluptates unde.</p>
             </div>
         </div>
         <div class="recent_elements">
-            <img src="img/recent.svg" alt="bolgpost_i">
+            <div class="post_thumbnail">
+                <img src="img/recent.svg" alt="bolgpost_i">
+            </div>
             <div class="recent_elements_text">
                 <h4><a href="#">Earn 100,000$</a></h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore, nihil qui. Consequatur enim, ipsa, exercitationem aperiam excepturi dolore voluptas ex ab quas sapiente, illum fugiat maxime quaerat accusamus voluptates unde.</p>
             </div>
         </div>
         <div class="recent_elements">
-            <img src="img/recent.svg" alt="bolgpost_i">
+            <div class="post_thumbnail">
+                <img src="img/recent.svg" alt="bolgpost_i">
+            </div>
             <div class="recent_elements_text">
                 <h4><a href="#">Earn 100,000$</a></h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore, nihil qui. Consequatur enim, ipsa, exercitationem aperiam excepturi dolore voluptas ex ab quas sapiente, illum fugiat maxime quaerat accusamus voluptates unde.</p>
             </div>
         </div>
         <div class="recent_elements">
-            <img src="img/recent.svg" alt="bolgpost_i">
+            <div class="post_thumbnail">
+                <img src="img/recent.svg" alt="bolgpost_i">
+            </div>
             <div class="recent_elements_text">
                 <h4><a href="#">Earn 100,000$</a></h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore, nihil qui. Consequatur enim, ipsa, exercitationem aperiam excepturi dolore voluptas ex ab quas sapiente, illum fugiat maxime quaerat accusamus voluptates unde.</p>
             </div>
         </div>
+
     </div>
 
     <div class="sticky_foot">
