PHP Starts After this Commit

--- a/posts.htm
+++ b/posts.htm
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/utilities.css">
+    <link rel="stylesheet" href="CSS/phone.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <title>Blog_Hire</title>
 </head>
@@ -37,33 +38,33 @@
         <h3>[Category Name] Blogs:-</h3>
         <br>
         <div class="recent_elements">
-            <img src="img/recent.svg" alt="bolgpost_i">
+            <div class="post_thumbnail">
+                <img src="img/recent.svg" alt="bolgpost_i">
+            </div>
             <div class="recent_elements_text">
                 <h4><a href="blogpost.html">Earn 100,000$</a></h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore, nihil qui. Consequatur enim, ipsa, exercitationem aperiam excepturi dolore voluptas ex ab quas sapiente, illum fugiat maxime quaerat accusamus voluptates unde.</p>
             </div>
         </div>
         <div class="recent_elements">
-            <img src="img/recent.svg" alt="bolgpost_i">
+            <div class="post_thumbnail">
+                <img src="img/recent.svg" alt="bolgpost_i">
+            </div>
             <div class="recent_elements_text">
                 <h4><a href="blogpost.html">Earn 100,000$</a></h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore, nihil qui. Consequatur enim, ipsa, exercitationem aperiam excepturi dolore voluptas ex ab quas sapiente, illum fugiat maxime quaerat accusamus voluptates unde.</p>
             </div>
         </div>
         <div class="recent_elements">
-            <img src="img/recent.svg" alt="bolgpost_i">
+            <div class="post_thumbnail">
+                <img src="img/recent.svg" alt="bolgpost_i">
+            </div>
             <div class="recent_elements_text">
                 <h4><a href="blogpost.html">Earn 100,000$</a></h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore, nihil qui. Consequatur enim, ipsa, exercitationem aperiam excepturi dolore voluptas ex ab quas sapiente, illum fugiat maxime quaerat accusamus voluptates unde.</p>
             </div>
         </div>
-        <div class="recent_elements">
-            <img src="img/recent.svg" alt="bolgpost_i">
-            <div class="recent_elements_text">
-                <h4><a href="blogpost.html">Earn 100,000$</a></h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore, nihil qui. Consequatur enim, ipsa, exercitationem aperiam excepturi dolore voluptas ex ab quas sapiente, illum fugiat maxime quaerat accusamus voluptates unde.</p>
-            </div>
-        </div>
+
 
     </div>
 
