PHP Functionables almost completed

--- a/Other Stuff/no more use/posts.htm
+++ b/Other Stuff/no more use/posts.htm
@@ -37,30 +37,38 @@
         <h3>[Category Name] Blogs:-</h3>
         <br>
         <div class="recent_elements">
-            <img src="img/recent.svg" alt="bolgpost_i">
+            <div class="post_thumbnail">
+                <img src="img/recent.svg" alt="bolgpost_i">
+            </div>
             <div class="recent_elements_text">
-                <h4><a href="blogpost.html">Earn 100,000$</a></h4>
+                <h4><a href="#">Earn 100,000$</a></h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore, nihil qui. Consequatur enim, ipsa, exercitationem aperiam excepturi dolore voluptas ex ab quas sapiente, illum fugiat maxime quaerat accusamus voluptates unde.</p>
             </div>
         </div>
         <div class="recent_elements">
-            <img src="img/recent.svg" alt="bolgpost_i">
+            <div class="post_thumbnail">
+                <img src="img/recent.svg" alt="bolgpost_i">
+            </div>
             <div class="recent_elements_text">
-                <h4><a href="blogpost.html">Earn 100,000$</a></h4>
+                <h4><a href="#">Earn 100,000$</a></h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore, nihil qui. Consequatur enim, ipsa, exercitationem aperiam excepturi dolore voluptas ex ab quas sapiente, illum fugiat maxime quaerat accusamus voluptates unde.</p>
             </div>
         </div>
         <div class="recent_elements">
-            <img src="img/recent.svg" alt="bolgpost_i">
+            <div class="post_thumbnail">
+                <img src="img/recent.svg" alt="bolgpost_i">
+            </div>
             <div class="recent_elements_text">
-                <h4><a href="blogpost.html">Earn 100,000$</a></h4>
+                <h4><a href="#">Earn 100,000$</a></h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore, nihil qui. Consequatur enim, ipsa, exercitationem aperiam excepturi dolore voluptas ex ab quas sapiente, illum fugiat maxime quaerat accusamus voluptates unde.</p>
             </div>
         </div>
         <div class="recent_elements">
-            <img src="img/recent.svg" alt="bolgpost_i">
+            <div class="post_thumbnail">
+                <img src="img/recent.svg" alt="bolgpost_i">
+            </div>
             <div class="recent_elements_text">
-                <h4><a href="blogpost.html">Earn 100,000$</a></h4>
+                <h4><a href="#">Earn 100,000$</a></h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore, nihil qui. Consequatur enim, ipsa, exercitationem aperiam excepturi dolore voluptas ex ab quas sapiente, illum fugiat maxime quaerat accusamus voluptates unde.</p>
             </div>
         </div>
